[gd_scene load_steps=4 format=3 uid="uid://6utot8t7qpy1"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_3e7rh"]
[ext_resource type="Texture2D" uid="uid://qlxijx2r36xu" path="res://Assets/bG.png" id="2_b7xls"]

[sub_resource type="SystemFont" id="SystemFont_158mb"]

[node name="Menu" type="CanvasLayer"]
layer = 0
script = ExtResource("1_3e7rh")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b7xls")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -204.5
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MINESWEEPER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="EasyButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_158mb")
theme_override_font_sizes/font_size = 32
text = "Easy"
icon_alignment = 1

[node name="MediumButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Medium"

[node name="HardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hard"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/EasyButton" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/MediumButton" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/HardButton" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
